adjust swagger docs
